<resources>
    <string name="app_name">FilesMusic</string>
    <string name="default_path">/</string>
    <string name="to_parent">To parent</string>
    <string name="play_current_folder">Play</string>
    <string name="exit_app">Exit</string>
    <string name="fileitem_unknownfile">[Unknown file]</string>
    <string name="fileitem_directory">[Directory]</string>
    <string name="track_title">[Track title]</string>
    <string name="track_artist">[Track artist]</string>
    <string name="tract_length">--:--</string>
    <string name="track_album">[Track album]</string>
    <string name="empty_directory">Empty directory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abc">abc</string>
    <string name="track_length">--:--:--</string>
    <string name="seekBar_player_tip">%1$s [%2$d] / %3$s [%4$d] / %5$s [%6$d]</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="sd_card_storage">SD Card</string>
</resources>