<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_helloWorld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="Hello World!" />

    <TextView
        android:id="@+id/txt_currentPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/default_path"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layoutDirection="ltr"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_toParent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/up_one_level"
            android:text="@string/to_parent" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/play_current_folder"
            android:text="@string/play_current_folder" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/close_app"
            android:text="@string/exit_app" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView4"
        android:name="com.example.filesmusic.BlankFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="12dp"
        android:layout_weight="0"
        tools:layout="@layout/fragment_blank" />

</LinearLayout>