<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="2dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginVertical="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/fileItem_tracktitle"
        app:layout_constraintTop_toBottomOf="@+id/fileItem_tracktitle">

        <ImageView
            android:id="@+id/fileItem_albumart"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fileItem_tracktitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fileitem_audiofile" />

        <TextView
            android:id="@+id/fileItem_tracktitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:singleLine="true"
            android:text="@string/track_title"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fileItem_albumart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fileItem_trackartist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:singleLine="true"
            android:text="@string/track_artist"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fileItem_tracktitle"
            app:layout_constraintTop_toBottomOf="@+id/fileItem_tracktitle" />

        <TextView
            android:id="@+id/fileItem_tracklength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/tract_length"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/fileItem_trackalbum"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/fileItem_trackalbum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:singleLine="true"
            android:text="@string/track_album"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/fileItem_tracklength"
            app:layout_constraintStart_toStartOf="@+id/fileItem_trackartist"
            app:layout_constraintTop_toBottomOf="@+id/fileItem_trackartist" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>