<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".AudioPlayerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="2dp">

        <ImageView
            android:id="@+id/player_albumart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher_round"
            android:tooltipText="Album Art" />

        <TextView
            android:id="@+id/txt_player_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/track_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_player_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/track_artist"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_player_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/track_album"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/seekbar_player_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:alpha="0"
            android:gravity="center"
            android:textSize="12sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_player_seekbar_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/track_length" />

            <SeekBar
                android:id="@+id/seekbar_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txt_player_seekbar_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/track_length" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btn_player_playagain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:hapticFeedbackEnabled="false"
                    android:minWidth="26dp"
                    android:minHeight="26dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/player_playagain"
                    android:tooltipText="Skip Previous" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btn_player_skipprev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:hapticFeedbackEnabled="false"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/player_skipprev"
                    android:tooltipText="Skip Previous" />

                <ImageButton
                    android:id="@+id/btn_player_rewind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:hapticFeedbackEnabled="false"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/player_rewind"
                    android:tooltipText="Rewind" />

                <ImageButton
                    android:id="@+id/btn_player_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:hapticFeedbackEnabled="false"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/player_loading"
                    android:tooltipText="Play/Pause" />

                <ImageButton
                    android:id="@+id/btn_player_forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:hapticFeedbackEnabled="false"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/player_forward"
                    android:tooltipText="Forward" />

                <ImageButton
                    android:id="@+id/btn_player_skipnext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:hapticFeedbackEnabled="false"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/player_skipnext"
                    android:tooltipText="Skip Next" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent">

                <ToggleButton
                    android:id="@+id/btn_player_shuffle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:background="@drawable/player_selector_icon_shuffle"
                    android:clickable="true"
                    android:focusable="true"
                    android:hapticFeedbackEnabled="false"
                    android:minWidth="26dp"
                    android:minHeight="26dp"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />

                <ToggleButton
                    android:id="@+id/btn_player_loop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:background="@drawable/player_selector_icon_loop"
                    android:clickable="true"
                    android:focusable="true"
                    android:hapticFeedbackEnabled="false"
                    android:minWidth="26dp"
                    android:minHeight="26dp"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>